--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Buku Catatan Permateri</string>
+    <string name="submit">Submit</string>
+    <string name="test">Test</string>
 </resources>
